--- a/templates/my.cnf.erb
+++ b/templates/my.cnf.erb
@@ -1,42 +1,86 @@
 [client]
 port    = <%= port %>
 socket    = <%= socket %>
+
 [mysqld_safe]
 socket    = <%= socket %>
 nice    = 0
+
 [mysqld]
+
+# General
 user    = mysql
 socket    = <%= socket %>
 port      = <%= port %>
 basedir   = <%= basedir %>
 datadir   = <%= datadir %>
-tmpdir    = /tmp
-skip-external-locking
-bind-address    = <%= bind_address %>
-key_buffer         = 16M
-max_allowed_packet = 16M
-thread_stack       = 192K
-thread_cache_size  = 8
-myisam-recover     = BACKUP
-query_cache_limit  = 1M
-query_cache_size   = 16M
-log_error          = <%= log_error %>
-expire_logs_days   = 10
-max_binlog_size    = 100M
+tmpdir    = <%= tmpdir %>
+max_binlog_size    = <%= max_binlog_size %>
 <% if default_engine != 'UNSET' %>
 default-storage-engine = <%= default_engine %>
 <% end %>
+
+skip-external-locking
+skip-name-resolve
+
+# Cache
+thread-cache-size               = 16
+table-open-cache                = 4096
+table-definition-cache          = 2048
+query-cache-size                = <%= query_cache_size %>
+query-cache-limit               = <%= query_cache_limit %>
+
+## Per-thread Buffers
+sort-buffer-size                = <%= sort_buffer_size %>
+read-buffer-size                = <%= read_buffer_size %>
+read-rnd-buffer-size            = <%= read_rnd_buffer_size %>
+join-buffer-size                = <%= join_buffer_size %>
+
+## InnoDB
+innodb_data_file_path           = <%= innodb_data_file_path %>
+innodb_data_home_dir            = <%= innodb_data_home_dir %>
+innodb_log_group_home_dir       = <%= innodb_log_group_home_dir %>
+innodb_file_per_table           = <%= innodb_file_per_table %>
+innodb_buffer_pool_size         = <%= innodb_buffer_pool_size %>
+innodb_buffer_pool_instances    = <%= innodb_buffer_pool_instances %>
+innodb_log_file_size            = <%= innodb_log_file_size %>
+innodb_log_buffer_size          = <%= innodb_log_buffer_size %>
+innodb_open_files               = <%= innodb_open_files %>
+
+## Network
+bind-address    = <%= bind_address %>
+max_allowed_packet = 16M
+
+## MyISAM
+key_buffer         = 16M
+myisam-recover     = BACKUP
+
+
 <% if ssl == true %>
+## SSL
 ssl-ca    = <%= ssl_ca %>
 ssl-cert  = <%= ssl_cert %>
 ssl-key   = <%= ssl_key %>
 <% end %>
 
+## Logging
+log-slow-queries    = <%= slowlog_file %>
+long_query_time     = <%= slowlog_time %>
+log_error           = <%= log_error %>
+expire_logs_days    = 10
+
+## Threading
+thread_stack       = 192K
+thread_cache_size  = 8
+thread_concurrency  = <%= thread_concurrency %>
+
 [mysqldump]
 quick
 quote-names
 max_allowed_packet = 16M
+
 [mysql]
 [isamchk]
 key_buffer    = 16M
+
 !includedir /etc/mysql/conf.d/
