--- a/templates/my.cnf.erb
+++ b/templates/my.cnf.erb
@@ -46,6 +46,7 @@ innodb_buffer_pool_instances    = <%= innodb_buffer_pool_instances %>
 innodb_log_file_size            = <%= innodb_log_file_size %>
 innodb_log_buffer_size          = <%= innodb_log_buffer_size %>
 innodb_open_files               = <%= innodb_open_files %>
+innodb_flush_method             = <%= innodb_flush_method %>
 
 ## Network
 bind-address    = <%= bind_address %>
